# RAS-2017-group1

./: .gitignore  README.md
Documents/: Timelines and Tasks.xlsx
ras_project/: CMakeLists.txt  package.xml  package.xml~
ras_project/launch/: ms_one.launch
ras_project_brain/: CMakeLists.txt  package.xml
ras_project_brain/msg/: ObjPickup_Update.msg
ras_project_brain/src/: central_node.cpp  firstRun_node.cpp  mainRun_node.cpp
ras_project_brain/srv/: PickUpObj.srv  SetGoalPoint.srv
ras_project_bringup/: CMakeLists.txt  package.xml  package.xml~
ras_project_bringup/launch/: .ms_one.launch.swp
ras_project_camera/: CMakeLists.txt  CMakeLists.txt~  build one package  disabled_CMakeLists.txt~  notCMakeLists.txt  notPackage.txt  package.xml  package.xml~
ras_project_camera/launch/: camera.launch  camera.launch.save  camera_.launch  camera__.launch
ras_project_camera/msg/: QuaternionStamped.msg
ras_project_camera/ras_project_camera_old/: build one package  package.xml  setup.py
ras_project_camera/ras_project_camera_old/launch/: _camera.launch  test.launch
ras_project_camera/ras_project_camera_old/src/: classification__.py  color_detection.cpp
ras_project_camera/src/: .objectPosition_transform.cpp.swp  camera.cpp  camera_pcl.cpp  camera_pcl_.cpp  camera_transform.cpp  classification.py  classification_.py  classification__.py  classification_vgg.py  color_detection.cpp  color_detection.py  color_detection_.cpp  color_detection__.cpp  color_detection_doesntwork.cpp  color_detection_dontwork.cpp  color_detection_old.cpp  color_detection_works.cpp  detection.cpp  detection__.cpp  image_converter.cpp  objectPosition_transform.cpp  object_coord.cpp  object_recognition.cpp  object_recognition.cpp.save
ras_project_error_detection/: CMakeLists.txt  package.xml
ras_project_error_detection/launch/: wall_adder.launch
ras_project_error_detection/src/: error_detection.cpp
ras_project_launch/: CMakeLists.txt  package.xml
ras_project_launch/launch/: path_planning_only.launch  path_planning_simulation.launch  robot_run.launch  robot_start.launch
ras_project_lidar/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  frames.gv  package.xml
ras_project_lidar/launch/: fakelidar.launch
ras_project_lidar/src/: fakelidar_node.cpp  lidar_transform.cpp
ras_project_localisation/: 2017-11-02-09-56-26.bag  CMakeLists.txt  package.xml  tmp
ras_project_localisation/launch/: localisation.launch  localisation_simulation.launch
ras_project_localisation/poc/: Untitled0.ipynb  particle filter proof of concept.ipynb
ras_project_localisation/poc/.ipynb_checkpoints/: particle filter proof of concept-checkpoint.ipynb
ras_project_localisation/src/: localisation_node.cpp  robot_transform.cpp
ras_project_motor_control/: CMakeLists.txt
ras_project_motor_control/launch/: motors.launch
ras_project_motor_control/motor_control/: CMakeLists.txt  CMakeLists.txt~  package.xml
ras_project_motor_control/motor_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  param for controllers
ras_project_motor_control/motor_controller/launch/: motors.launch  motors.launch~
ras_project_motor_control/motor_controller/src/: .motor_controller.cpp.swp  motor_controller.cpp  motor_controller.cpp.save  motor_mockup.cpp  motor_teleop.cpp
ras_project_motor_control/src/: .motor_controller.cpp.swn  .motor_controller.cpp.swo  motor_controller.cpp.save.1  motor_mockup.cpp
ras_project_motor_controller/: CMakeLists.txt  package.xml
ras_project_motor_controller/src/: motor_controller.cpp  motor_mockup.cpp  motor_teleop.cpp
ras_project_object_addition/: CMakeLists.txt  classified_objects.txt  package.xml
ras_project_object_addition/src/: object_addition.cpp
ras_project_odometry/: .package.xml.swp  CMakeLists.txt  package.xml
ras_project_odometry/src/: odometry.cpp
ras_project_path_following/: CMakeLists.txt  laser.launch  notCMakeList.txt  notPackage.xml  package.xml
ras_project_path_following/launch/: path_planning.launch
ras_project_path_following/src/: collision_detection.cpp  path_following.cpp
ras_project_path_planning/: CMakeLists.txt  package.xml  wall_add_test.yaml
ras_project_path_planning/launch/: path_planning.launch  path_planning_only.launch  path_planning_simulation.launch
ras_project_path_planning/src/: Exploration_mode.cpp  OccupancyGrid.cpp  path_planning.cpp
ras_project_speaker/: CMakeLists.txt  package.xml  setup.py
ras_project_speaker/launch/: speaker.launch
ras_project_speaker/src/: bored_dan.py
ras_project_tf_listener/: CMakeLists.txt  package.xml
ras_project_tf_listener/launch/: tf.launch
ras_project_tf_listener/src/: .tf_listener.cpp.swo  frames.gv  objectPosition_transform.cpp  tf_listener.cpp
ras_project_uArm/: CMakeLists.txt  package.xml
ras_project_uArm/launch/: uArm_control.launch
ras_project_uArm/src/: .uArm_control.cpp.swp  uArm_control.cpp
ras_project_uarm/: CMakeLists.txt  package.xml
ras_project_uarm/launch/: test_calibration.yaml  uArm_control.launch  uarm_control.launch
ras_project_uarm/src/: uArm_transform.cpp  uarm_control.cpp
ras_project_uarm/srv/: MoveArmCartesian.srv
ras_project_wall_adder/: CMakeLists.txt  package.xml
ras_project_wall_adder/launch/: wall_adder.launch
ras_project_wall_adder/map/: lab_maze_2017_new.txt
ras_project_wall_adder/src/: wall_adder.cpp
src/ras_project_camera/src/: camera_transform.cpp
src/ras_project_tf_listener/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/ras_project_tf_listener/src/: tf_listener.cpp
src/ras_project_uArm/src/: uArm_transform.cpp
zbar_ros/launch/: QR_reader.launch
zbar_ros/src/: barcode_reader_nodelet.cpp
