<?xml version="1.0"?>
<package>
  <name>ras_project</name>
  <version>0.0.0</version>
  <description>The ras_project package</description>
  <maintainer email="ras11@todo.todo">ras11</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ras_project_odometry </run_depend>
  <run_depend>ras_project_motor_controller</run_depend>
  <run_depend>ras_project_lidar</run_depend>
  <run_depend></run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <metapackage/>
  </export>
</package>
