<?xml version="1.0"?>
<package>
  <name>ras_project_motor_controller</name>
  <version>0.1.0</version>
  <description>Package of the motor controller</description>

  <maintainer email="tjylaval@kth.se">Thibault Laval</maintainer>
  <maintainer email="shilo@kth.se">Albina Shilo</maintainer>

  <license>BSD</license>

  <build_depend>roscpp</build_depend>  
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>phidgets</build_depend>
  <build_depend>std_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>phidgets</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
