<?xml version="1.0"?>
<package>
  <name>ras_project_object_addition</name>
  <version>0.0.0</version>
  <description>The ras_project_object_addition package</description>

  <maintainer email="tjylaval@kth.se">Thibault Laval</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>ras_msgs</build_depend>
  <build_depend>ras_project_camera</build_depend>
  <!--build_depend>message_generation</build_depend-->

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>python-tensorflow-pip</run_depend>	
  <run_depend>ras_msgs</run_depend>
  <run_depend>ras_project_camera</run_depend>
  <!--run_depend>message_runtime</run_depend-->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
